ECK/03-ingress-elasticsearch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: logging
spec:
  ingressClassName: nginx
  rules:
  - host: elasticsearch.mguarinos.xyz
    http:
      paths:
      - backend:
          service:
            name: elasticsearch-es-http
            port:
              number: 5601
        path: /
        pathType: Prefix
